--- a/_posts/2018-10-29-vimrc.md
+++ b/_posts/2018-10-29-vimrc.md
@@ -4,12 +4,12 @@ title: "TOT0Ro's vimrc & Plugin"
 date: 2018-10-29
 excerpt: "주로 쓰는 Vim 설정이다. 이 설정으로 Kernel을 분석하는데 막힘이 없다."
 tag:
-- vim
-- config
-categories:
 - vi
+- config
 - plugin
 - environment
+categories:
+- Environment
 ---
 
 # Vimrc
