--- a/_posts/Kat/2019-07-24-ctags-kat-2-1.md
+++ b/_posts/Kat/2019-07-24-ctags-kat-2-1.md
@@ -1,5 +1,5 @@
 ---
-title: "Ctags Architecture with Kernel - Kat(2-1)"
+title: "Ctags Architecture with Kernel - KAT(2-1)"
 classes: wide
 last_modified_at: 2019-07-24T04:30:00-09:00
 categories:
