make miss text right(ctags-kat), update most of vim basic(vim-script)

--- a/_posts/Kat/2019-07-24-ctags-kat-2-1.md
+++ b/_posts/Kat/2019-07-24-ctags-kat-2-1.md
@@ -248,6 +248,10 @@ Ctags의 옵션에 대해서 알아보자 (Kernel에서 쓰는 옵션만)
       -I static,const                                 \
       --extra=+fq --c-kinds=+px --fields=+iaS --langmap=c:+.h \
       "${regex[@]}"
+
+      setup_regex exuberant kconfig
+      all_kconfigs | xargs $1 -a                              \
+      --langdef=kconfig --language-force=kconfig "${regex[@]}"
 ```
 
 그래서 kernel은 다음 옵션을 사용함을 알았다.
