--- a/_posts/2022-02-16-wsl.md
+++ b/_posts/2022-02-16-wsl.md
@@ -26,7 +26,7 @@ WSL1을 종종 쓰던 나는, WSL1의 성능에 경악을 금치 못하고, Hype
 
 PowerShell 관리자 권한 실행
 
-```
+```powershell
 > wsl --install -d Ubuntu
 ```
 
@@ -38,9 +38,9 @@ PowerShell 관리자 권한 실행
 
 ####업데이트
 
-```
-wsl --update
-wsl --shutdown
+```powershell
+> wsl --update
+> wsl --shutdown
 ```
 
 #### Xming 설치
@@ -62,12 +62,12 @@ wsl --shutdown
 
 #### 테스트
 
-```
+```bash
 ## Install x11 applications
-sudo apt install x11-apps -y
+$ sudo apt install x11-apps -y
 
 ## Run xclock
-xclock
+$ xclock
 ```
 
 
@@ -77,7 +77,7 @@ xclock
 
 업데이트
 
-```
+```powershell
 > wsl --update
 ```
 
@@ -91,21 +91,21 @@ usbipd-win\_x.msi 설치
 
 Ubuntu-base
 
-```Bash
+```bash
 $ sudo apt install linux-tools-5.4.0-77-generic hwdata
 $ sudo update-alternatives --install /usr/local/bin/usbip usbip /usr/lib/linux-tools/5.4.0-77-generic/usbip 20
 ```
 
 #### USB 디바이스 연결
 
-```PowerShell
+```powershell
 > usbipd wsl list                      # USB 디바이스 나열
 > usbipd wsl attach --busid <busid>    # 디바이스 연결
 > usbipd wsl detach --busid <busid>    # 디바이스 해제
 ```
 
 USB 연결 확인
-```Bash
+```bash
 $ lsusb
 ```
 
