jenkins, nginx-django-mariadb

--- a/_posts/2022-03-03-jenkins.md
+++ b/_posts/2022-03-03-jenkins.md
@@ -43,3 +43,42 @@ steps {
 ```
 
 해당 디렉토리가 없으면 생성한다.
+
+
+## Multibranch Pipeline
+
+새로운 Item -> Multibranch Pipeline
+
+- Display Name: 프로젝트 명
+- Branch Sources: Git
+  - Project Repository: Https Git 주소
+  - Credentials
+    - Username with password: 계정 이름과 패스워드
+      - App password를 할당받아야함(Github or Bitbucket)
+  - Behaviours
+    - Discover branches
+    - Discover tags
+- Build Configuration
+  - Mode: by Jenkinsfile
+    - Script Path: Jenkinsfile.groovy
+      - Repository에 저장된 jenkinsfile path
+- Scan Multibranch Pipeline Triggers
+  - Build when a change is pushed to BitBucket
+    - Override Repository URL or Path: Https Git 주소
+
+
+## Build in Docker
+
+Build 전용 docker image를 사용한 agent에서 Build를 진행한다.
+
+Host의 docker objects(containers, images)와 독립적인 objects pool을 가지고
+있으므로, 서로 공유가 되지 않는다. 즉, docker image를 dind 컨테이너에서
+Host docker와 별도로 가지고 있어야 한다.  
+`docker inspect -f . {OBJECT}` 명령을 통해서 OBJECT 존재 여부를 확인할 수 있다.  
+예시: `docker exec {DIND CONTAINER} docker inspect -f . ubuntu`
+
+## 사이트 공유
+|tag|목적|링크|
+|---|---|---|
+|multibranch|**공식** 생성하는 법|https://www.jenkins.io/doc/book/pipeline/multibranch/|
+|webhook|깃허브|https://velog.io/@jae_cheol/%EB%A9%80%ED%8B%B0%EB%B8%8C%EB%9E%9C%EC%B9%98-%ED%8C%8C%EC%9D%B4%ED%94%84%EB%9D%BC%EC%9D%B8|
