--- a/_posts/2022-03-03-jenkins.md
+++ b/_posts/2022-03-03-jenkins.md
@@ -57,15 +57,28 @@ def name = value
 
 ### sh : Shell Script
 
-``````
-sh "Shell scripts like 'ls -al'"
-
 ```
+sh 'Shell scripts like "ls -al"'
+
+'''
 Multi line shell scripts like
 IP='localhost'
-ssh user@IP -p 22
+ssh user@$IP -p 22
+'''
+
+sh "Use double quotes for using variables like 'echo ${name}'"
+
+"""
+Multi line shell
+echo ${name}
+"""
 ```
-``````
+
+쌍따옴표로 쉘을 사용하는 경우, Jenkins 변수를 사용할 수 있지만,
+쉘 내 변수는 $를 이스케이프 해주어야 한다.
+```
+echo "${JENKINS_VARIABLE} \$SHELL_VARIABLE"
+```
 
 ### agent : Run step by agent
 
@@ -101,8 +114,26 @@ docker {
       - Repository에 저장된 jenkinsfile path
 - Scan Multibranch Pipeline Triggers
   - Build when a change is pushed to BitBucket
-    - Override Repository URL or Path: Https Git 주소
 
+
+## Build Triggers
+
+1. Jenkins Plugin 설치
+  - Multibranch Scan Webhook Trigger
+1. Item 혹은 pipeline 설정
+  - Scan Multibranch Pipeline Triggers
+    - Scan by webhook 체크
+      - Trigger token 설정(ex, `trigger-jenkins`)
+1. BitBucket Repository Webhook 설정
+  - Add Webhook
+    - Title
+    - URL
+      - 위에서 설정한 Trigger token을 이용해 URL 설정
+      - `http://jenkins-host-url:port/multibranch-webhook-trigger/invoke?token=trigger-jenkins`
+    - Status: Active 체크
+    - Triggers 체크
+      - Repository: Push
+      - Pull request: Created, Updated
 
 ## Build in Docker
 
