--- a/_posts/2022-04-07-tools.md
+++ b/_posts/2022-04-07-tools.md
@@ -13,3 +13,12 @@ excerpt: "Utility tools"
 ### balenaEtcher
 
 https://www.balena.io/etcher/
+
+
+## Linux
+
+### Ubuntu
+
+#### Raspberry Pi
+
+https://ubuntu.com/download/raspberry-pi
