--- a/_posts/2018-10-29-vimrc.md
+++ b/_posts/2018-10-29-vimrc.md
@@ -1,7 +1,7 @@
 ---
 title: "TOT0Ro's vimrc & Plugin"
 date: 2018-10-29
-excerpt: "주로 쓰는 Vim 설정이다. 이 설정으로 Kernel을 분석하는데 막힘이 없다."
+excerpt: "주로 쓰는 Vim 설정이다. 이 설정으로 무엇을 만들던지 막힘이 없다."
 categories:
 - Environment
 tag:
@@ -19,13 +19,6 @@ tag:
 설치 되어있는 플러그인들이다. <br />
 모두 유명한 플러그인이라 구글에 플러그인 이름을 검색하기만 해도 github repo가 검색된다. <br />
 내 것을 그대로 사용해도 되지만 입맛대로 고쳐서 쓰자.
-
-``` vim
-set rtp+=~/.config/nvim/bundle/Vundle.vim
-call vundle#begin('~/.config/nvim/bundle')
-```
-
-나는 nvim(neovim)을 사용하므로 기본 vim을 사용하시는 분들은 경로를 수정해주어야 한다.
 
 
 ### 쓰면 편한 플러그인.
