Update utility tool

--- a/_posts/2022-04-07-tools.md
+++ b/_posts/2022-04-07-tools.md
@@ -14,6 +14,10 @@ excerpt: "Utility tools"
 
 https://www.balena.io/etcher/
 
+### USB-Image-Tool
+
+https://www.alexpage.de/usb-image-tool/download/
+
 
 ## Linux
 
